@@ -100,6 +100,7 @@ import sun.util.cldr.CLDRLocaleProviderAdapter;
 import sun.util.locale.LocaleObjectCache;
 import sun.util.locale.provider.LocaleProviderAdapter;
 import sun.util.locale.provider.ResourceBundleBasedAdapter;
+import sun.util.resources.Bundles;
 import sun.util.resources.LocaleData;
 import sun.util.resources.ParallelListResourceBundle;
 
@@ -134,6 +135,13 @@ import sun.util.resources.ParallelListResourceBundle;
  */
 @AutomaticallyRegisteredFeature
 public class LocalizationFeature implements InternalFeature {
+
+    /**
+     * Locales required by default in Java.
+     * 
+     * @see Locale#getAvailableLocales()
+     */
+    private static final Locale[] MINIMAL_LOCALES = new Locale[]{Locale.ROOT, Locale.ENGLISH, Locale.US};
 
     protected final boolean optimizedMode = Options.LocalizationOptimizedMode.getValue();
 
@@ -282,7 +290,7 @@ public class LocalizationFeature implements InternalFeature {
     public void duringSetup(DuringSetupAccess a) {
         DuringSetupAccessImpl access = (DuringSetupAccessImpl) a;
         if (optimizedMode) {
-            access.registerObjectReplacer(this::eagerlyInitializeBundles);
+            access.registerObjectReachableCallback(ResourceBundle.class, this::eagerlyInitializeBundles);
         }
         langAliasesCacheField = access.findField(CLDRLocaleProviderAdapter.class, "langAliasesCache");
         parentLocalesMapField = access.findField(CLDRLocaleProviderAdapter.class, "parentLocalesMap");
@@ -303,26 +311,22 @@ public class LocalizationFeature implements InternalFeature {
      * getContents methods unreachable, the bundles are initialized eagerly and the lookup methods
      * are substituted. However, if there are bundle instances somewhere in the heap that were not
      * put in the map, they won't be initialized and therefore accessing their content will cause
-     * runtime failures. Therefore, we visit each object in the heap and if it is a ResourceBundle,
-     * we eagerly initialize it.
+     * runtime failures. Therefore, we register a callback that notifies us for every reachable
+     * {@link ResourceBundle} object in the heap, and we eagerly initialize it.
      */
-    private Object eagerlyInitializeBundles(Object object) {
+    private void eagerlyInitializeBundles(@SuppressWarnings("unused") DuringAnalysisAccess access, ResourceBundle bundle) {
         assert optimizedMode : "Should only be triggered in the optimized mode.";
-        if (object instanceof ResourceBundle) {
-            ResourceBundle bundle = (ResourceBundle) object;
-            try {
-                /*
-                 * getKeys can be null for ResourceBundle.NONEXISTENT_BUNDLE, which causes the
-                 * keySet method to crash.
-                 */
-                if (bundle.getKeys() != null) {
-                    bundle.keySet();
-                }
-            } catch (Exception ex) {
-                trace("Failed to eagerly initialize bundle " + bundle + ", " + bundle.getBaseBundleName() + ", reason " + ex.getClass() + " " + ex.getMessage());
+        try {
+            /*
+             * getKeys can be null for ResourceBundle.NONEXISTENT_BUNDLE, which causes the keySet
+             * method to crash.
+             */
+            if (bundle.getKeys() != null) {
+                bundle.keySet();
             }
+        } catch (Exception ex) {
+            trace("Failed to eagerly initialize bundle " + bundle + ", " + bundle.getBaseBundleName() + ", reason " + ex.getClass() + " " + ex.getMessage());
         }
-        return object;
     }
 
     @Platforms(Platform.HOSTED_ONLY.class)
@@ -371,6 +375,8 @@ public class LocalizationFeature implements InternalFeature {
         if (Options.IncludeAllLocales.getValue()) {
             Collections.addAll(locales, Locale.getAvailableLocales());
             /*- Fallthrough to also allow adding custom locales */
+        } else {
+            Collections.addAll(locales, MINIMAL_LOCALES);
         }
         List<String> invalid = new ArrayList<>();
         for (String tag : Options.IncludeLocales.getValue().values()) {
@@ -413,9 +419,9 @@ public class LocalizationFeature implements InternalFeature {
     @Platforms(Platform.HOSTED_ONLY.class)
     public static void addCharset(Charset charset) {
         Map<String, Charset> charsets = ImageSingletons.lookup(LocalizationSupport.class).charsets;
-        charsets.put(charset.name().toLowerCase(), charset);
+        charsets.put(charset.name().toLowerCase(Locale.ENGLISH), charset);
         for (String name : charset.aliases()) {
-            charsets.put(name.toLowerCase(), charset);
+            charsets.put(name.toLowerCase(Locale.ENGLISH), charset);
         }
 
         /* Eagerly initialize all the tables necessary for decoding / encoding. */
@@ -559,19 +565,43 @@ public class LocalizationFeature implements InternalFeature {
         prepareBundle(baseName, allLocales);
     }
 
-    @SuppressWarnings("deprecation")
+    private static final String[] RESOURCE_EXTENSION_PREFIXES = new String[]{
+                    "sun.text.resources.cldr",
+                    "sun.util.resources.cldr",
+                    "sun.text.resources",
+                    "sun.util.resources"
+    };
+
     @Platforms(Platform.HOSTED_ONLY.class)
     public void prepareBundle(String baseName, Collection<Locale> wantedLocales) {
         if (baseName.isEmpty()) {
             return;
         }
 
+        prepareBundleInternal(baseName, wantedLocales);
+
+        String alternativeBundleName = null;
+        for (String resourceExtentionPrefix : RESOURCE_EXTENSION_PREFIXES) {
+            if (baseName.startsWith(resourceExtentionPrefix) && !baseName.startsWith(resourceExtentionPrefix + ".ext")) {
+                alternativeBundleName = baseName.replace(resourceExtentionPrefix, resourceExtentionPrefix + ".ext");
+                break;
+            }
+        }
+        if (alternativeBundleName != null) {
+            prepareBundleInternal(alternativeBundleName, wantedLocales);
+        }
+    }
+
+    private void prepareBundleInternal(String baseName, Collection<Locale> wantedLocales) {
         boolean somethingFound = false;
         for (Locale locale : wantedLocales) {
             List<ResourceBundle> resourceBundle;
             try {
                 resourceBundle = ImageSingletons.lookup(ClassLoaderSupport.class).getResourceBundle(baseName, locale);
             } catch (MissingResourceException mre) {
+                for (Locale candidateLocale : support.control.getCandidateLocales(baseName, locale)) {
+                    prepareNegativeBundle(baseName, candidateLocale);
+                }
                 continue;
             }
             somethingFound |= !resourceBundle.isEmpty();
@@ -607,7 +637,7 @@ public class LocalizationFeature implements InternalFeature {
             trace(errorMessage);
             prepareNegativeBundle(baseName, Locale.ROOT);
             for (String language : wantedLocales.stream().map(Locale::getLanguage).collect(Collectors.toSet())) {
-                prepareNegativeBundle(baseName, new Locale(language));
+                prepareNegativeBundle(baseName, Locale.of(language));
             }
             for (Locale locale : wantedLocales) {
                 if (!locale.getCountry().isEmpty()) {
@@ -619,14 +649,13 @@ public class LocalizationFeature implements InternalFeature {
 
     @Platforms(Platform.HOSTED_ONLY.class)
     protected void prepareNegativeBundle(String baseName, Locale locale) {
-        String bundleName = baseName + (locale.toString().isEmpty() ? "" : "_" + locale);
-        Class<?> clazz = findClassByName.apply(bundleName);
-        if (clazz != null) {
-            RuntimeReflection.register(clazz);
-        } else {
-            RuntimeReflection.registerClassLookup(bundleName);
-        }
+        String bundleName = support.control.toBundleName(baseName, locale);
+        RuntimeReflection.registerClassLookup(bundleName);
         Resources.singleton().registerNegativeQuery(support.getResultingPattern(baseName, locale) + ".properties");
+        String otherBundleName = Bundles.toOtherBundleName(baseName, bundleName, locale);
+        if (!otherBundleName.equals(bundleName)) {
+            RuntimeReflection.registerClassLookup(otherBundleName);
+        }
     }
 
     @Platforms(Platform.HOSTED_ONLY.class)
